@@ -153,7 +153,7 @@ nk_x11_render(enum nk_anti_aliasing AA, int max_vertex_buffer, int max_element_b
         config.vertex_layout = vertex_layout;
         config.vertex_size = sizeof(struct nk_x11_vertex);
         config.vertex_alignment = NK_ALIGNOF(struct nk_x11_vertex);
-        config.null = dev->null;
+        config.tex_null = dev->null;
         config.circle_segment_count = 22;
         config.curve_segment_count = 22;
         config.arc_segment_count = 22;
